# musicdatachrislee

./: .env.example  .env.qqmc.example  .gitignore  README.md  kugou_menu.py  menu.py  netease_menu.py  pyproject.toml  run_web.py  scheduled_crawl.py  scheduled_crawl.service.example  setup.py
data/: GetPlayTopData_HasPlayTopData_sample.json  GetPlayTopData_decrypted.json  bench_batch_after_changes.db  bench_fast_after_changes.db  bench_qps1_changes.db  bench_qps5_changes.db  kugou_toplist.db  netease_toplist.db  qqmusic_changes.db  qqmusic_toplist.db  song_achievements_003SqJTl4fnhRC.json  song_detail_003SqJTl4fnhRC.json  toplist_runs.db  toplist_runs.json  u6_decrypted_heat_sample.json
data/bench_batch_after/: netease_8327_20260227_100057.db
data/bench_fast_after/: netease_8327_20260227_095426.db
data/bench_qps1/: netease_8327_20260227_093058.db
scripts/: README_BURP.md  README_ag1_decode_guide.md  README_抓包工具备选.md  ag1_cipher.py  analyze_curl_sh.py  analyze_har.py  backfill_milestone_logs.py  capture_u6_responses.py  correct_kugou_metric_outliers.py  fetch_kugou_song_heat.py  fetch_qq_music_index_heat.py  fetch_song_achievements_by_mid.py  fetch_song_by_mid.py  install_burp_community.sh  kugou_heat_link_notes.md  migrate_changes_to_monthly_tables.py  music_index_api_analysis.md  probe_more_song_sources.py  probe_qq_song_heat.py  query_song_favorite_milestone.py  replay_curl_u6.py  run_fiddler_everywhere.sh  setup_java21_for_burp.sh  try_decrypt_ag1_response.py  try_u6_encoding.py  zzc_sign.py
templates/: changereport.html  index.html  new_song.html
(+237 files in other folders)
