[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qqmusic-crawler"
version = "0.1.0"
description = "QQ Music artist and song crawler (educational purpose)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "httpx>=0.27.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "loguru>=0.7.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.31",
  "tenacity>=8.5.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
